首页引导页实现

--- a/app.json
+++ b/app.json
@@ -1,13 +1,9 @@
 {
   "pages":[
-    "pages/index/index",
+    "pages/welcome/welcome",
     "pages/logs/logs"
   ],
   "window":{
-    "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "微信接口功能演示",
-    "backgroundColor": "#eeeeee",
-    "backgroundTextStyle": "light"
+    "navigationBarBackgroundColor": "#b3d4db"
   }
 }
