require引入模块和template模板的使用，更新README

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages":[
-     "pages/posts/post",
-    "pages/welcome/welcome"
+    "pages/welcome/welcome",
+     "pages/posts/post"
   ],
   "window":{
     "navigationBarBackgroundColor": "#b3d4db"
