完成文章详情静态样式

--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "pages":[
+     "pages/posts/post-detail/post-detail",
     "pages/welcome/welcome",
      "pages/posts/post"
+    
   ],
   "window":{
     "navigationBarBackgroundColor": "#b3d4db"
