--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "pages":[
-     "pages/posts/post-detail/post-detail",
+    
     "pages/welcome/welcome",
-     "pages/posts/post"
+     "pages/posts/post",
+      "pages/posts/post-detail/post-detail"
     
   ],
   "window":{
-    "navigationBarBackgroundColor": "#b3d4db"
+    "navigationBarBackgroundColor": "#405f80"
   }
 }
