电影界面template实现和样式实现

--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
   "pages": [
      "pages/welcome/welcome",
-     "pages/posts/post-detail/post-detail",
     "pages/posts/post",
-    "pages/movie/movie"
-    
+    "pages/movies/movies",
+    "pages/posts/post-detail/post-detail"
   ],
   "window": {
     "navigationBarBackgroundColor": "#405f80"
@@ -20,7 +19,7 @@
         "selectedIconPath":"images/tab/yuedu_hl.png"
       },
       {
-        "pagePath": "pages/movie/movie",
+        "pagePath": "pages/movies/movies",
         "text": "电影",
          "iconPath":"images/tab/dianying.png",
          "selectedIconPath":"images/tab/dianying_hl.png"
