--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/posts/post",
     "pages/movies/movies",
     "pages/posts/post-detail/post-detail",
-    "pages/movies/more-movie/more-movie"
+    "pages/movies/more-movie/more-movie",
+     "pages/movies/movie-detail/movie-detail"
   ],
   "window": {
     "navigationBarBackgroundColor": "#405f80"
